[GUI] Fixing problem with overflow hidden inherited from jQuery slideToggle function

--- a/actions/createproject/resources/css/style.scss
+++ b/actions/createproject/resources/css/style.scss
@@ -335,6 +335,7 @@ dl{
 	-moz-box-shadow: inset 0 -1px 2px rgba(0,0,0,.2);
 	box-shadow: inset 0 -1px 2px rgba(0,0,0,.2);
 	background:#f0f0f0;
+	overflow: visible !important;
 }
 
 
